# clixx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cli++.h  cli++.hpp  usage.h  writer.h
internal/: error.h  error.hpp  target.hpp  writer.h  writer.hpp
internal/winmain-starter/: CMakeLists.txt  winmain-starter.cpp
test/: CMakeLists.txt  main.cpp
